feat(index.html): Se agregó la sección de personajes y un carrusel con los personajes secundarios.

--- a/index.html
+++ b/index.html
@@ -57,35 +57,34 @@
                 </button>
             </article>
         </section>
-
-        <section id="sinopsis" class="sinopsis-section container rounded mx-auto py-10 px-4 bg-[var(--color-background-section)]">
-            <article>
-                <h3 class="text-4xl font-bold mb-8 text-[var(--color-accent)]">
-                    Sinopsis: Chainsaw Man - La Película: El Arco de Reze</h3>
-                <p class="mb-4 text-[var(--color-p)]">
+        <section id="sinopsis" class="w-full py-14 px-6 bg-[var(--color-background-section)]">
+            <article class="max-w-3xl mx-auto bg-black/10 backdrop-blur rounded-2xl shadow-lg p-8 md:p-10 space-y-4">
+                
+                <h3 class="text-4xl font-bold mb-6 text-[var(--color-accent)]">
+                    Sinopsis: Chainsaw Man - La Película: El Arco de Reze
+                </h3>
+                <p class="text-[var(--color-p)] leading-relaxed">
                     El Arco de Reze marca una nueva etapa emocional y violenta para Denji, 
                     el híbrido humano-demonio que se ha unido a la Cuarta División Especial 
-                    de Cazadores de Demonios.
+                    de Cazadores de Demonos.
                 </p>
-                <p class="mb-4 text-[var(--color-p)]">
+                <p class="text-[var(--color-p)] leading-relaxed">
                     Tras los brutales enfrentamientos anteriores, Denji busca desesperadamente 
                     una vida normal, enfocándose en sus deseos más sencillos: tener un techo, comida y,
                     sobre todo, encontrar el amor y la conexión humana genuina.
                 </p>
-                <p class="mb-4 text-[var(--color-p)]">
+                <p class="text-[var(--color-p)] leading-relaxed">
                     Todo parece cambiar cuando conoce a Reze, una misteriosa y encantadora chica que 
                     trabaja en una cafetería. A diferencia de Makima, Reze parece corresponder al afecto 
                     de Denji, despertando en él sentimientos que nunca antes había experimentado. 
-                    La inocencia y el deseo de una vida simple de Denji se encuentran por primera vez 
-                    con la promesa de una relación real.
                 </p>
-                <p class="mb-4 text-[var(--color-p)]">
+                <p class="text-[var(--color-p)] leading-relaxed">
                     Sin embargo, el mundo de Denji está lleno de traición y secretos. A medida que su 
                     vínculo con Reze se profundiza, Denji se da cuenta de que ella no es solo una chica 
-                    cualquiera. Reze es una poderosa agente extranjera y otro híbrido demonio, el Demonio 
+                    cualquiera. Reze es una poderosa agente extranjera y otro híbrido demonio: el Demonio 
                     Bomba (Bomb Devil), enviada con una misión letal: robar el corazón de Chainsaw Man.
                 </p>
-                <p class="mb-4 text-[var(--color-p)]">
+                <p class="text-[var(--color-p)] leading-relaxed">
                     Lo que comienza como un inocente romance se transforma rápidamente en una guerra brutal 
                     y explosiva. Denji se enfrenta a su batalla más personal y desesperada hasta el momento, 
                     forzado a confrontar la devastadora verdad sobre el amor, la manipulación y la 
@@ -96,12 +95,198 @@
 
         <section id="personajes" class="personajes-section container rounded mx-auto py-10 px-4 my-10">
             <article id="principales">
-                <h3 class="">Personajes principales</h3>
+                <h3 class="text-4xl font-bold mb-6 text-[var(--color-accent)]">
+                    Personajes principales
+                </h3>
+                <div class="flex flex-col md:flex-row md:space-x-6 space-y-6 md:space-y-0 my-8">
+                    <div>
+                        <img src="src/public/img/Denji.webp" alt="Imagen de Denji">
+                    </div>
+                    <div>
+                        <h4>Denji | El Hombre Motosierra</h4>
+                        <p>
+                            Denji era un joven pobre y endeudado que fusionó su corazón con
+                            Pochita, el Demonio Motosierra, para sobrevivir. Ahora, como cazador
+                            de demonios, lucha por una vida ordinaria, motivado por deseos tan
+                            simples como tener pan con mantequilla.
+                        </p>
+                        <p><strong>Contrato: </strong> ochita, el Demonio Motosierra. </p>
+                        <p><strong>Ocupación: </strong> Cazador de Demonios de Seguridad Pública. </p>
+                    </div>
+                </div>
+                <hr>
+                <div class="flex flex-col md:flex-row md:space-x-6 space-y-6 md:space-y-0 my-8">
+                    <div>
+                        <h4> Reze | El demonio de las bombas </h4>
+                        <p>
+                            Reze es una misteriosa mujer que se convierte en el interés amoroso
+                            de Denji. En realidad, es una agente enviada para capturarlo, pero
+                            sus sentimientos por él complican su misión.
+                        </p>
+                        <p>
+                            <strong>Contrato: </strong> Demonio Bombardero.
+                        </p>
+                        <p>
+                            <strong>Ocupación: </strong> Agente encubierta.
+                        </p>
+                    </div>
+                    <div>
+                        <img src="src/public/img/Reze.webp" alt="Imagen de Reze.">
+                    </div>
+                </div>
+                <hr>
+                <div class="flex flex-col md:flex-row md:space-x-6 space-y-6 md:space-y-0 my-8">
+                    <div>
+                        <img src="src/public/img/makima.webp" alt="Imagen de Makima">
+                    </div>
+                    <div>
+                        <h4> Makima | El demonio del control </h4>
+                        <p>
+                            Makima es la enigmática líder de la División 4 de Cazadores de
+                            Demonios. Su control sobre Denji y sus compañeros es absoluto, y sus
+                            verdaderas intenciones permanecen ocultas.
+                        </p>
+                        <p>
+                            <strong>Contrato: </strong> Desconocido.
+                        </p>
+                        <p>
+                            <strong>Ocupación: </strong> Jefa de la División 4.
+                        </p>
+                    </div>
+                </div>
+                <hr>
+                <div class="flex flex-col md:flex-row md:space-x-6 space-y-6 md:space-y-0 my-8">
+                    <div>
+                        <h4>Power | El demonio de la sangre</h4>
+                        <p>
+                            Power es un demonio de la sangre que trabaja junto a Denji en la
+                            División 4. Su personalidad caótica y su lealtad a sus amigos la
+                            hacen una aliada impredecible pero valiosa.
+                        </p>
+                        <p>
+                            <strong>Contrato: </strong> Demonio de la Sangre.
+                        </p>
+                        <p>
+                            <strong>Ocupación: </strong> Cazadora de Demonios de Seguridad
+                            Pública.
+                        </p>
+                    </div>
+                    <div>
+                        <img src="src/public/img/power.webp" alt="imagen de Power">
+                    </div>
+                </div>
+                <hr>
+                <div class="flex flex-col md:flex-row md:space-x-6 space-y-6 md:space-y-0 my-8">
+                    <div>
+                        <img src="src/public/img/aki.webp" alt="imagen de Aki Hayakawa">
+                    </div>
+                    <div>
+                        <h4> Aki Hayakawa | El cazador serio </h4>
+                        <p>
+                            Aki Hayakawa es un cazador de demonios serio y dedicado que trabaja
+                            en la División 4. Su objetivo principal es vengar la muerte de su
+                            familia a manos de demonios.
+                        </p>
+                        <p>
+                            <strong>Contrato: </strong> Demonio del Zorro, Demonio del Gato y
+                            Demonio del Pez.
+                        </p>
+                        <p>
+                            <strong>Ocupación: </strong> Cazador de Demonios de Seguridad
+                            Pública.
+                        </p>
+                    </div>
+                </div>
+                <hr>
+                <div class="flex flex-col md:flex-row md:space-x-6 space-y-6 md:space-y-0 my-8">
+                    <div>
+                        <h4> Kishibe | El mentor experimentado </h4>
+                        <p>
+                            Kishibe es un cazador de demonios veterano conocido por su habilidad
+                            y experiencia. Actúa como mentor para Denji y otros miembros de la
+                            División 4, enseñándoles a sobrevivir en el peligroso mundo de los
+                            demonios.
+                        </p>
+                        <p>
+                            <strong>Contrato: </strong> Desconocido.
+                        </p>
+                        <p>
+                            <strong>Ocupación: </strong> Cazador de Demonios de Seguridad
+                            Pública.
+                        </p>
+                    </div>
+                    <div>
+                        <img src="src/public/img/kishibe.webp" alt="imagen de Kishibe">
+                    </div>
+                </div>
+                <hr>
+                <div class="flex flex-col md:flex-row md:space-x-6 space-y-6 md:space-y-0 my-8">
+                    <div>
+                        <img src="src/public/img/beam.webp" alt="imagen de Beam">
+                    </div>
+                    <div>
+                        <h4> Beam | El poseido de los tiburones </h4>
+                        <p>
+                            Beam es un demonio tiburón que posee a un cazador de demonios. A pesar
+                            de su naturaleza aterradora, Beam desarrolla una relación única con
+                            Denji y sus compañeros, aportando tanto fuerza como comicidad al grupo.
+                        </p>
+                        <p>
+                            <strong>Contrato: </strong> Demonio Tiburón.
+                        </p>
+                        <p>
+                            <strong>Ocupación: </strong> Cazador de Demonios de Seguridad Pública.
+                        </p>
+                    </div>
+                </div>
             </article>
 
             <article id="secundarios">
-                <h3>Personajes secundarios</h3>
+                <h3 class="text-4xl font-bold mb-6 text-[var(--color-accent)]">
+                    Personajes secundarios
+                </h3>
+                <div id="carrusel">
+                    <div class="track">
+                        <article class="personaje">
+                            <h4>El Corazón de la Sierra</h4>
+                            <p>El demonio Pochita hizo un contrato con Denji que le permite transformarse.</p>
+                            <img src="src/public/img/pochis.png" alt="Imagen de pochita">
+                        </article>
+
+                        <article class="personaje">
+                            <h4>Kobeni</h4>
+                            <p>Se la caracteriza por ser nerviosa e insegura, especialmente cuando se enfrenta a situaciones peligrosas.</p>
+                            <img src="src/public/img/kobeni.png" alt="Imagen de makima">
+                        </article>
+
+                        <article class="personaje">
+                            <h4>La División Especial 4</h4>
+                            <p>Power, Aki y otros cazadores enfrentan amenazas apocalípticas.</p>
+                            <img src="src/public/img/cuarta_seccion.jpg" alt="Imagen de la cuarta seccion">
+                        </article>
+
+                        <!-- Duplicado para el efecto de infinito  -->
+                        <article class="personaje">
+                            <h4>El Corazón de la Sierra</h4>
+                            <p>El demonio Pochita hizo un contrato con Denji que le permite transformarse.</p>
+                            <img src="src/public/img/pochis.png" alt="Imagen de pochita">
+                        </article>
+
+                        <article class="personaje">
+                            <h4>Kobeni</h4>
+                            <p>Se la caracteriza por ser nerviosa e insegura, especialmente cuando se enfrenta a situaciones peligrosas.</p>
+                            <img src="src/public/img/kobeni.png" alt="Imagen de makima">
+                        </article>
+
+                        <article class="personaje">
+                            <h4>La División Especial 4</h4>
+                            <p>Power, Aki y otros cazadores enfrentan amenazas apocalípticas.</p>
+                            <img src="src/public/img/cuarta_seccion.jpg" alt="Imagen de la cuarta seccion">
+                        </article>
+                    </div>
+                </div>
             </article>
         </section>
     </main>
+    <script src="src/js/carrusel.js"></script>
 </body>
