feat(index.html): Se agregó la posibilidad de ver el trailer desde la página con un Iframe.

--- a/index.html
+++ b/index.html
@@ -287,6 +287,22 @@
                 </div>
             </article>
         </section>
+
+        <!--Sección para el trailer en youtube.-->
+        <section id="trailer" class="w-full py-14 px-6 bg-[var(--color-background-section)]">
+            <h3 class="text-4xl font-bold mb-6 text-[var(--color-accent)]">Ver Trailer</h3>
+            <div class="video-container my-8">
+                <iframe 
+                width="100%" 
+                height="500" 
+                src="https://www.youtube.com/embed/eRXMdJoXRGQ" 
+                title="YouTube video player" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                allowfullscreen>
+                </iframe>
+            </div>
+        </section>
     </main>
     <script src="src/js/carrusel.js"></script>
 </body>
