feat(criticia): Se agregó el espacio de critica mediante la llamada a una api.

--- a/index.html
+++ b/index.html
@@ -283,6 +283,24 @@
                             <p>Power, Aki y otros cazadores enfrentan amenazas apocalípticas.</p>
                             <img src="src/public/img/cuarta_seccion.jpg" alt="Imagen de la cuarta seccion">
                         </article>
+
+                        <article class="personaje">
+                            <h4>El Corazón de la Sierra</h4>
+                            <p>El demonio Pochita hizo un contrato con Denji que le permite transformarse.</p>
+                            <img src="src/public/img/pochis.png" alt="Imagen de pochita">
+                        </article>
+
+                        <article class="personaje">
+                            <h4>Kobeni</h4>
+                            <p>Se la caracteriza por ser nerviosa e insegura, especialmente cuando se enfrenta a situaciones peligrosas.</p>
+                            <img src="src/public/img/kobeni.png" alt="Imagen de makima">
+                        </article>
+
+                        <article class="personaje">
+                            <h4>La División Especial 4</h4>
+                            <p>Power, Aki y otros cazadores enfrentan amenazas apocalípticas.</p>
+                            <img src="src/public/img/cuarta_seccion.jpg" alt="Imagen de la cuarta seccion">
+                        </article>
                     </div>
                 </div>
             </article>
@@ -303,6 +321,15 @@
                 </iframe>
             </div>
         </section>
+
+        <!--Sección para la critica de la pélicula-->
+        <section id="critica">
+            <h3 class="text-4xl font-bold mb-6 text-[var(--color-accent)]">Resultados de la pélicula</h3>
+            <article id="data_movie">
+                
+            </article>
+        </section>
     </main>
     <script src="src/js/carrusel.js"></script>
+    <script src="src/js/data_movie.js"></script>
 </body>
