--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Chainsaw Man – Arco de Reze</title>
         <script src="https://cdn.tailwindcss.com"></script>
         <link rel="stylesheet" href="src/css/global.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     </head>
 </html>
 <body>
@@ -99,14 +100,14 @@
                     Personajes principales
                 </h3>
                 <div class="flex flex-col md:flex-row gap-10 py-20 items-center">
-                    <div>
+                    <div class="character-img">
                         <img 
                         src="src/public/img/Denji.webp" 
                         alt="Imagen de Denji" 
                         class="rounded-2xl shadow-xl hover:scale-105 transition-transform duration-300"
                         >
                     </div>
-                    <div>
+                    <div class="character-info">
                         <h4 class="text-[var(--color-accent)] uppercase font-extrabold text-3xl tracking-wider mb-4">Denji | El Hombre Motosierra</h4>
                         <p class="text-xl leading-8 text-[var(--color-p)] mb-4">
                             Denji era un joven pobre y endeudado que fusionó su corazón con
@@ -122,7 +123,7 @@
                 <div class="w-full h-[2px] bg-gradient-to-r from-transparent via-[var(--color-accent)] to-transparent my-20"></div>
 
                 <div class="flex flex-col md:flex-row gap-10 py-20 items-center">
-                    <div>
+                    <div class="character-info">
                         <h4 class="text-[var(--color-accent)] uppercase font-extrabold text-3xl tracking-wider mb-4"> Reze | El demonio de las bombas </h4>
                         <p class="text-xl leading-8 text-[var(--color-p)] mb-4">
                             Reze es una misteriosa mujer que se convierte en el interés amoroso
@@ -132,7 +133,7 @@
                         <p class="text-xl"><strong class="text-[var(--color-accent)]">Contrato: </strong> Demonio Bombardero.</p>
                         <p class="text-xl"><strong class="text-[var(--color-accent)]">Ocupación: </strong> Agente encubierta.</p>
                     </div>
-                    <div>
+                    <div class="character-img">
                         <img src="src/public/img/Reze.webp"
                         alt="Imagen de Reze."
                         class="rounded-2xl shadow-xl hover:scale-105 transition-transform duration-300"
@@ -143,14 +144,14 @@
                 <div class="w-full h-[2px] bg-gradient-to-r from-transparent via-[var(--color-accent)] to-transparent my-20"></div>
 
                 <div class="flex flex-col md:flex-row gap-10 py-20 items-center">
-                    <div>
+                    <div class="character-img">
                         <img 
                         src="src/public/img/makima.webp" 
                         alt="Imagen de Makima" 
                         class="rounded-2xl shadow-xl hover:scale-105 transition-transform duration-300"
                         >
                     </div>
-                    <div>
+                    <div class="character-info">
                         <h4 class="text-[var(--color-accent)] uppercase font-extrabold text-3xl tracking-wider mb-4"> Makima | El demonio del control </h4>
                         <p class="text-xl leading-8 text-[var(--color-p)] mb-4">
                             Makima es la enigmática líder de la División 4 de Cazadores de
@@ -165,7 +166,7 @@
                 <div class="w-full h-[2px] bg-gradient-to-r from-transparent via-[var(--color-accent)] to-transparent my-20"></div>
 
                 <div class="flex flex-col md:flex-row gap-10 py-20 items-center">
-                    <div>
+                    <div class="character-info">
                         <h4 class="text-[var(--color-accent)] uppercase font-extrabold text-3xl tracking-wider mb-4">Power | El demonio de la sangre</h4>
                         <p class="text-xl leading-8 text-[var(--color-p)] mb-4">
                             Power es un demonio de la sangre que trabaja junto a Denji en la
@@ -175,7 +176,7 @@
                         <p class="text-xl"><strong class="text-[var(--color-accent)]">Contrato: </strong> Demonio de la Sangre.</p>
                         <p class="text-xl"><strong class="text-[var(--color-accent)]">Ocupación: </strong> Cazadora de Demonios de SeguridadPública.</p>
                     </div>
-                    <div>
+                    <div class="character-img">
                         <img 
                         src="src/public/img/power.webp" 
                         alt="imagen de Power" 
@@ -187,14 +188,14 @@
                 <div class="w-full h-[2px] bg-gradient-to-r from-transparent via-[var(--color-accent)] to-transparent my-20"></div>
 
                 <div class="flex flex-col md:flex-row gap-10 py-20 items-center">
-                    <div>
+                    <div class="character-img">
                         <img 
                         src="src/public/img/aki.webp" 
                         alt="imagen de Aki Hayakawa" 
                         class="rounded-2xl shadow-xl hover:scale-105 transition-transform duration-300"
                         >
                     </div>
-                    <div>
+                    <div class="character-info">
                         <h4 class="text-[var(--color-accent)] uppercase font-extrabold text-3xl tracking-wider mb-4"> Aki Hayakawa | El cazador serio </h4>
                         <p class="text-xl leading-8 text-[var(--color-p)] mb-4">
                             Aki Hayakawa es un cazador de demonios serio y dedicado que trabaja
@@ -209,7 +210,7 @@
                 <div class="w-full h-[2px] bg-gradient-to-r from-transparent via-[var(--color-accent)] to-transparent my-20"></div>
 
                 <div class="flex flex-col md:flex-row gap-10 py-20 items-center">
-                    <div>
+                    <div class="character-info">
                         <h4 class="text-[var(--color-accent)] uppercase font-extrabold text-3xl tracking-wider mb-4"> Kishibe | El mentor experimentado </h4>
                         <p class="text-xl leading-8 text-[var(--color-p)] mb-4">
                             Kishibe es un cazador de demonios veterano conocido por su habilidad
@@ -220,7 +221,7 @@
                         <p class="text-xl"><strong class="text-[var(--color-accent)]">Contrato: </strong> Desconocido.</p>
                         <p class="text-xl"><strong class="text-[var(--color-accent)]">Ocupación: </strong> Cazador de Demonios de SeguridadPública.</p>
                     </div>
-                    <div>
+                    <div class="character-img">
                         <img 
                         src="src/public/img/kishibe.webp" 
                         alt="imagen de Kishibe" 
@@ -232,10 +233,13 @@
                 <div class="w-full h-[2px] bg-gradient-to-r from-transparent via-[var(--color-accent)] to-transparent my-20"></div>
 
                 <div class="flex flex-col md:flex-row gap-10 py-20 items-center">
-                    <div>
-                        <img src="src/public/img/beam.webp" alt="imagen de Beam" class="rounded-2xl shadow-xl hover:scale-105 transition-transform duration-300">
+                    <div class="character-img">
+                        <img 
+                        src="src/public/img/beam.webp" 
+                        alt="imagen de Beam" 
+                        class="rounded-2xl shadow-xl hover:scale-105 transition-transform duration-300">
                     </div>
-                    <div>
+                    <div class="character-info">
                         <h4 class="text-[var(--color-accent)] uppercase font-extrabold text-3xl tracking-wider mb-4"> Beam | El poseido de los tiburones </h4>
                         <p class="text-xl leading-8 text-[var(--color-p)] mb-4">
                             Beam es un demonio tiburón que posee a un cazador de demonios. A pesar
@@ -246,9 +250,7 @@
                         <p class="text-xl"><strong class="text-[var(--color-accent)]">Ocupación: </strong> Cazador de Demonios de Seguridad Pública.</p>
                     </div>
                 </div>
-
                 <div class="w-full h-[2px] bg-gradient-to-r from-transparent via-[var(--color-accent)] to-transparent my-20"></div>
-
             </article>
 
             <article id="secundarios">
@@ -340,6 +342,7 @@
             </article>
         </section>
     </main>
+    <script src="src/js/animations.js"></script>
     <script src="src/js/carrusel.js"></script>
     <script src="src/js/data_movie.js"></script>
 </body>
