Se agrego una mejor compativilidad con patallas pequeñas.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header bg-[var(--color-dark)] text-white">
         <nav class="nav container mx-auto flex items-center justify-between py-4">
             <h1 class="text-xl sm:text-2x1 font-extrabold uppercase tracking-wider text-[var(--color-accent)]">ChainSaw Man - El Arco De Reze.</h1>
-            <div id="options-content">
+            <div id="options-content" class="hidden md:flex flex-row">
                 <a 
                 href="#sinopsis"
                 class="m-2 hover:text-[var(--color-accent)] hover:underline">
@@ -35,15 +35,50 @@
                     Critica
                 </a>
             </div>
+            <div id="button_content" class="sm:hidden flex flex-col">
+                <button id="menu_button">
+                    <img src="src/public/icons/menu.svg" alt="icono de menu">
+                </button>
+            </div>
         </nav>
     </header>
+    <div 
+    id="sidebar_menu" 
+    class="fixed top-0 left-0 w-64 h-full bg-[var(--color-background-section)] text-[var(--color-text)] p-6 z-50 **transform -translate-x-full transition-transform duration-300** md:hidden"
+    >
+        <button id="close_sidebar" class="text-2xl mb-6">
+            <img src="src/public/icons/close.svg" alt="Icono de cerrar">
+        </button>
+        <div class="flex flex-col space-y-4">
+            <a 
+                href="#sinopsis"
+                class="m-2 hover:text-[var(--color-accent)] hover:underline">
+                    Sinopsis
+                </a>
+                <a 
+                href="#personajes"
+                class="m-2 hover:text-[var(--color-accent)] hover:underline">
+                    Personajes
+                </a>
+                <a 
+                href="#trailer"
+                class="m-2 hover:text-[var(--color-accent)] hover:underline">
+                    Ver trailer
+                </a>
+                <a 
+                href="#critica"
+                class="m-2 hover:text-[var(--color-accent)] hover:underline">
+                    Critica
+            </a>
+        </div>
+    </div>
     <main>
         <section id="main-section" class="main-section flex flex-col items-center justify-center text-center py-20 px-4">
             <article>
                 <p id="phrase" class="mb-4 text-2xl sm:text-4xl font-semibold text-[var(--color-text)]">
                     convierte en cazador de demonios.
                 </p>
-                <h2 class="text-8xl mb-4 sm:text-2x1 font-extrabold uppercase tracking-wider text-[var(--color-accent)]">
+                <h2 class="text-4xl mb-4 sm:text-6xl md:text-8xl font-extrabold uppercase tracking-wider text-[var(--color-accent)]">
                     Chainsaw Man – Arco de Reze
                 </h2>
                 <p class="mb-6 text-lg sm:text-xl text-[var(--color-p)]">
@@ -345,4 +380,5 @@
     <script src="src/js/animations.js"></script>
     <script src="src/js/carrusel.js"></script>
     <script src="src/js/data_movie.js"></script>
+    <script src="src/js/side_bar.js"></script>
 </body>
