--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Chainsaw Man – Arco de Reze</title>
         <script src="https://cdn.tailwindcss.com"></script>
+        <link rel="icon" href="src/public/icons/favicon.ico">
         <link rel="stylesheet" href="src/css/global.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     </head>
