feat: se agregó al personaje del demonio de la violencia al carrusel

--- a/index.html
+++ b/index.html
@@ -295,60 +295,79 @@
                 </h3>
                 <div id="carrusel">
                     <div class="track">
-                        <article class="personaje">
+                        <div class="personaje">
                             <h4>El Corazón de la Sierra</h4>
                             <p>El demonio Pochita hizo un contrato con Denji que le permite transformarse.</p>
                             <img src="src/public/img/pochis.png" alt="Imagen de pochita">
-                        </article>
+                        </div>
 
-                        <article class="personaje">
+                        <div class="personaje">
                             <h4>Kobeni</h4>
                             <p>Se la caracteriza por ser nerviosa e insegura, especialmente cuando se enfrenta a situaciones peligrosas.</p>
                             <img src="src/public/img/kobeni.png" alt="Imagen de makima">
-                        </article>
+                        </div>
 
-                        <article class="personaje">
+                        <div class="personaje">
                             <h4>La División Especial 4</h4>
                             <p>Power, Aki y otros cazadores enfrentan amenazas apocalípticas.</p>
                             <img src="src/public/img/cuarta_seccion.jpg" alt="Imagen de la cuarta seccion">
-                        </article>
+                        </div>
+
+                        <div class="personaje">
+                            <h4>Demonio dela vioalencia</h4>
+                            <p>Es un personaje que encarna el miedo al concepto de violencia</p>
+                            <img src="src/public/img/violencia.jpeg" alt="Imagen del demonio de la violencia">
+                        </div>
 
                         <!-- Duplicado para el efecto de infinito  -->
-                        <article class="personaje">
+                        <div class="personaje">
                             <h4>El Corazón de la Sierra</h4>
                             <p>El demonio Pochita hizo un contrato con Denji que le permite transformarse.</p>
                             <img src="src/public/img/pochis.png" alt="Imagen de pochita">
-                        </article>
+                        </div>
 
-                        <article class="personaje">
+                        <div class="personaje">
                             <h4>Kobeni</h4>
                             <p>Se la caracteriza por ser nerviosa e insegura, especialmente cuando se enfrenta a situaciones peligrosas.</p>
                             <img src="src/public/img/kobeni.png" alt="Imagen de makima">
-                        </article>
+                        </div>
 
-                        <article class="personaje">
+                        <div class="personaje">
                             <h4>La División Especial 4</h4>
                             <p>Power, Aki y otros cazadores enfrentan amenazas apocalípticas.</p>
                             <img src="src/public/img/cuarta_seccion.jpg" alt="Imagen de la cuarta seccion">
-                        </article>
+                        </div>
 
-                        <article class="personaje">
+                        <div class="personaje">
+                            <h4>Demonio dela vioalencia</h4>
+                            <p>Es un personaje que encarna el miedo al concepto de violencia</p>
+                            <img src="src/public/img/violencia.jpeg" alt="Imagen del demonio de la violencia">
+                        </div>
+
+                        <!--Triplicado para el efecto infinito-->
+                        <div class="personaje">
                             <h4>El Corazón de la Sierra</h4>
                             <p>El demonio Pochita hizo un contrato con Denji que le permite transformarse.</p>
                             <img src="src/public/img/pochis.png" alt="Imagen de pochita">
-                        </article>
+                        </div>
 
-                        <article class="personaje">
+                        <div class="personaje">
                             <h4>Kobeni</h4>
                             <p>Se la caracteriza por ser nerviosa e insegura, especialmente cuando se enfrenta a situaciones peligrosas.</p>
                             <img src="src/public/img/kobeni.png" alt="Imagen de makima">
-                        </article>
+                        </div>
 
-                        <article class="personaje">
+                        <div class="personaje">
                             <h4>La División Especial 4</h4>
                             <p>Power, Aki y otros cazadores enfrentan amenazas apocalípticas.</p>
                             <img src="src/public/img/cuarta_seccion.jpg" alt="Imagen de la cuarta seccion">
-                        </article>
+                        </div>
+
+                        <div class="personaje">
+                            <h4>Demonio dela vioalencia</h4>
+                            <p>Es un personaje que encarna el miedo al concepto de violencia</p>
+                            <img src="src/public/img/violencia.jpeg" alt="Imagen del demonio de la violencia">
+                        </div>
                     </div>
                 </div>
             </article>
