--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <button 
                 type="button" 
                 class="text-white bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 shadow-lg shadow-red-500/50 dark:shadow-lg dark:shadow-red-800/80 font-medium rounded-full text-sm px-4 py-2.5 text-center leading-5"
-                onclick="alert('Hola soy el pibe Motosierra')">
+                onclick="alert('Contrato realizado.')">
                     Hacer Un Contrato
                 </button>
             </article>
@@ -397,6 +397,11 @@
             </article>
         </section>
     </main>
+    <footer>
+        <small class="flex flex-row w-full justify-center m-5">
+            © 2025 · ChainSaw Man El Arco De Reze.
+        </small>
+    </footer>
     <script src="src/js/animations.js"></script>
     <script src="src/js/carrusel.js"></script>
     <script src="src/js/data_movie.js"></script>
