feat(side-bar): Se agregó la función de cerrar el sidebar cuando presionas un enlace dentro del mismo.

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                             hacen una aliada impredecible pero valiosa.
                         </p>
                         <p class="text-xl"><strong class="text-[var(--color-accent)]">Contrato: </strong> Demonio de la Sangre.</p>
-                        <p class="text-xl"><strong class="text-[var(--color-accent)]">Ocupación: </strong> Cazadora de Demonios de SeguridadPública.</p>
+                        <p class="text-xl"><strong class="text-[var(--color-accent)]">Ocupación: </strong> Cazadora de Demonios de Seguridad Pública.</p>
                     </div>
                     <div class="character-img">
                         <img 
@@ -238,7 +238,7 @@
                             en la División 4. Su objetivo principal es vengar la muerte de su
                             familia a manos de demonios.
                         </p>
-                        <p class="text-lx"><strong class="text-[var(--color-accent)]">Contrato: </strong> Demonio del Zorro, Demonio del Gato yDemonio del Pez.</p>
+                        <p class="text-xl"><strong class="text-[var(--color-accent)]">Contrato: </strong> Demonio del Zorro, Demonio del Gato y Demonio del Pez.</p>
                         <p class="text-xl"><strong class="text-[var(--color-accent)]">Ocupación: </strong> Cazador de Demonios de Seguridad Pública.</p>
                     </div>
                 </div>
@@ -255,7 +255,7 @@
                             demonios.
                         </p>
                         <p class="text-xl"><strong class="text-[var(--color-accent)]">Contrato: </strong> Desconocido.</p>
-                        <p class="text-xl"><strong class="text-[var(--color-accent)]">Ocupación: </strong> Cazador de Demonios de SeguridadPública.</p>
+                        <p class="text-xl"><strong class="text-[var(--color-accent)]">Ocupación: </strong> Cazador de Demonios de Seguridad Pública.</p>
                     </div>
                     <div class="character-img">
                         <img 
