Fix typo in character contract description

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                             de demonios, lucha por una vida ordinaria, motivado por deseos tan
                             simples como tener pan con mantequilla.
                         </p>
-                        <p class="text-xl"><strong class="text-[var(--color-accent)]">Contrato: </strong> ochita, el Demonio Motosierra. </p>
+                        <p class="text-xl"><strong class="text-[var(--color-accent)]">Contrato: </strong> Pochita, el Demonio Motosierra. </p>
                         <p class="text-xl"><strong class="text-[var(--color-accent)]">Ocupación: </strong> Cazador de Demonios de Seguridad Pública. </p>
                     </div>
                 </div>
